Fixed default scroll on overflow-y in mobile

--- a/assignments/one-todov2/styles.css
+++ b/assignments/one-todov2/styles.css
@@ -139,7 +139,7 @@ li:hover {
         height: auto;
         justify-content: space-evenly;
         max-height: 35px;
-        overflow-y:scroll;
+        overflow-y: auto;
     }
 
     .not-supported {
